@@ -24,7 +24,7 @@ class Sgbl
 		$this->__var_program_name = 'kloxo';
 		$this->__ver_major = "6";
 		$this->__ver_minor = "1";
-		$this->__ver_release = "13";
+		$this->__ver_release = "14";
 		$this->__ver_enterprise = "Single Server Edition";
 		$this->__ver_type = "production";
 		$this->__ver_extra = "Stable";
